<resources>
    <string name="app_name" translatable="true">Simple Calculator</string>
    <string name="textView_print_result" translatable="false">0</string>
    <string name="button_reset" translatable="false">C</string>
    <string name="button_negative_value" translatable="false">-/+</string>
    <string name="button_percent" translatable="false">%</string>
    <string name="button_division" translatable="false">/</string>
    <string name="button_bt_7" translatable="false">7</string>
    <string name="button_bt_8" translatable="false">8</string>
    <string name="button_bt_9" translatable="false">9</string>
    <string name="button_multiplication" translatable="false">*</string>
    <string name="button_bt_4" translatable="false">4</string>
    <string name="button_bt_5" translatable="false">5</string>
    <string name="button_bt_6" translatable="false">6</string>
    <string name="button_subtracting" translatable="false">-</string>
    <string name="button_addition" translatable="false">+</string>
    <string name="button_bt_3" translatable="false">3</string>
    <string name="button_bt_2" translatable="false">2</string>
    <string name="button_bt_1" translatable="false">1</string>
    <string name="button_result" translatable="false">=</string>
    <string name="button_separator" translatable="false">.</string>
    <string name="button_bt_0" translatable="false">0</string>
</resources>