<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/texture_background_960_720">

    <TextView
        android:id="@+id/textView_print_result"
        android:layout_width="@dimen/AcConstraintLayoutTextViewWidth"
        android:layout_height="@dimen/AcConstraintLayoutTextViewHeight"
        android:hint="@string/textView_print_result"
        android:textSize="@dimen/textView_textSize_print_result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="@dimen/AcConstraintLayoutButtonWidth"
        android:layout_height="@dimen/AcConstraintLayoutButtonHeight"
        android:text="@string/button_reset"
        app:backgroundTintMode="screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/button_division"
        android:layout_width="@dimen/AcConstraintLayoutButtonWidth"
        android:layout_height="@dimen/AcConstraintLayoutButtonHeight"
        android:text="@string/button_division"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/button_bt_7"
        android:layout_width="@dimen/AcConstraintLayoutButtonWidth"
        android:layout_height="@dimen/AcConstraintLayoutButtonHeight"
        android:text="@string/button_bt_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />

    <Button
        android:id="@+id/button_bt_8"
        android:layout_width="@dimen/AcConstraintLayoutButtonWidth"
        android:layout_height="@dimen/AcConstraintLayoutButtonHeight"
        android:text="@string/button_bt_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />

    <Button
        android:id="@+id/button_bt_9"
        android:layout_width="@dimen/AcConstraintLayoutButtonWidth"
        android:layout_height="@dimen/AcConstraintLayoutButtonHeight"
        android:text="@string/button_bt_9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />

    <Button
        android:id="@+id/button_multiplication"
        android:layout_width="@dimen/AcConstraintLayoutButtonWidth"
        android:layout_height="@dimen/AcConstraintLayoutButtonHeight"
        android:text="@string/button_multiplication"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.643"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/button_bt_4"
        android:layout_width="@dimen/AcConstraintLayoutButtonWidth"
        android:layout_height="@dimen/AcConstraintLayoutButtonHeight"
        android:text="@string/button_bt_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692" />

    <Button
        android:id="@+id/button_bt_5"
        android:layout_width="@dimen/AcConstraintLayoutButtonWidth"
        android:layout_height="@dimen/AcConstraintLayoutButtonHeight"
        android:text="@string/button_bt_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692" />

    <Button
        android:id="@+id/button_bt_6"
        android:layout_width="@dimen/AcConstraintLayoutButtonWidth"
        android:layout_height="@dimen/AcConstraintLayoutButtonHeight"
        android:text="@string/button_bt_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692" />

    <Button
        android:id="@+id/button_subtracting"
        android:layout_width="@dimen/AcConstraintLayoutButtonWidth"
        android:layout_height="@dimen/AcConstraintLayoutButtonHeight"
        android:text="@string/button_subtracting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/button_addition"
        android:layout_width="@dimen/AcConstraintLayoutButtonWidth"
        android:layout_height="@dimen/AcConstraintLayoutButtonHeight"
        android:text="@string/button_addition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594" />

    <Button
        android:id="@+id/button_bt_3"
        android:layout_width="@dimen/AcConstraintLayoutButtonWidth"
        android:layout_height="@dimen/AcConstraintLayoutButtonHeight"
        android:text="@string/button_bt_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.788" />

    <Button
        android:id="@+id/button_bt_2"
        android:layout_width="@dimen/AcConstraintLayoutButtonWidth"
        android:layout_height="@dimen/AcConstraintLayoutButtonHeight"
        android:text="@string/button_bt_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786" />

    <Button
        android:id="@+id/button_bt_1"
        android:layout_width="@dimen/AcConstraintLayoutButtonWidth"
        android:layout_height="@dimen/AcConstraintLayoutButtonHeight"
        android:text="@string/button_bt_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.788" />

    <Button
        android:id="@+id/button_result"
        android:layout_width="@dimen/AcConstraintLayoutButtonWidth"
        android:layout_height="@dimen/AcConstraintLayoutButtonHeight"
        android:text="@string/button_result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691" />

    <Button
        android:id="@+id/button_bt_0"
        android:layout_width="@dimen/AcConstraintLayoutButtonWidth"
        android:layout_height="@dimen/AcConstraintLayoutButtonHeight"
        android:text="@string/button_bt_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786" />


</androidx.constraintlayout.widget.ConstraintLayout>